[package]
name = "nms"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
